# hs-xdr-simple

./: LICENSE  README.markdown  hs-xdr-simple.cabal
examples/: GangliaMessage.hs
src/Codec/Binary/XDR/: Simple.hs
