name:                hs-xdr-simple
version:             0.2.0.1
synopsis:            A codec module implements a subset of eXternal Data Representation (RFC: 4506)
description:         A thin wrapper around the cereal package, inspired by Python's xdrlib.
license:             BSD3
license-file:        LICENSE
author:              horus
maintainer:          horus.li@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.markdown,
                     examples/GangliaMessage.hs
cabal-version:       >= 1.10

library
  ghc-options:         -Wall -Werror -fno-warn-type-defaults
  exposed-modules:     Codec.Binary.XDR.Simple

  other-extensions:    TypeSynonymInstances,
                       FlexibleInstances,
                       ScopedTypeVariables,
                       OverlappingInstances

  build-depends:       base                == 4.*,
                       bytestring          >= 0.10, 
                       cereal              >= 0.4,
                       text                >= 0.11.2.2
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
